# spitests

./: .gitignore  CMakeLists.txt  README.md  loopback  make.sh  spiloopback.conf  spisend  spitests  spitests.conf  spitests.cpp
spiloopback_src/: spitests.cpp  spitests.h
spisend_src/: spisend  spisend.cpp
stm32_bare2/: core.S  linker_script.ld  main.elf
